// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Causes dropdown to show when input is focused 1`] = `
<ComboboxComponent
  debounceRate={500}
  disabled={false}
  error={null}
  errorSubInfo={null}
  handle={null}
  id="name"
  inputProps={Object {}}
  inputStyles="inline"
  inputValue=""
  isRequired={true}
  isSearchable={true}
  items={
    Array [
      "music",
      "maths",
      "manga",
      "morning",
      "musical",
      "mania",
      "message",
      "metal",
      "micro",
      "macro",
      "microphone",
    ]
  }
  keyName="name"
  label="Combobox"
  labelHidden={false}
  name="name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onSelect={null}
  placeholder="Type m"
  requiredLabel=""
>
  <div
    className="formGroup inline "
    id="name-container"
  >
    <label
      className="controlLabel false "
      htmlFor="name"
    >
      Combobox
    </label>
    <div
      className="container"
    >
      <Autosuggest
        alwaysRenderSuggestions={false}
        error={null}
        errorSubInfo={null}
        focusInputOnSuggestionClick={true}
        getSuggestionValue={[Function]}
        highlightFirstSuggestion={false}
        id="1"
        inputProps={
          Object {
            "className": "formControl false ",
            "disabled": false,
            "id": "name",
            "name": "name",
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "placeholder": "Type m",
            "required": true,
            "value": "",
          }
        }
        multiSection={false}
        onSuggestionSelected={[Function]}
        onSuggestionsClearRequested={[Function]}
        onSuggestionsFetchRequested={[Function]}
        renderSuggestion={[Function]}
        renderSuggestionsContainer={[Function]}
        shouldRenderSuggestions={[Function]}
        suggestions={
          Array [
            Object {
              "value": "music",
            },
            Object {
              "value": "maths",
            },
            Object {
              "value": "manga",
            },
            Object {
              "value": "morning",
            },
            Object {
              "value": "musical",
            },
            Object {
              "value": "mania",
            },
            Object {
              "value": "message",
            },
            Object {
              "value": "metal",
            },
            Object {
              "value": "micro",
            },
            Object {
              "value": "macro",
            },
            Object {
              "value": "microphone",
            },
          ]
        }
        theme={null}
      >
        <Autowhatever
          getSectionItems={[Function]}
          highlightedItemIndex={null}
          highlightedSectionIndex={null}
          id="1"
          inputProps={
            Object {
              "className": "formControl false ",
              "disabled": false,
              "id": "name",
              "name": "name",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "placeholder": "Type m",
              "required": true,
              "value": "",
            }
          }
          itemProps={[Function]}
          items={
            Array [
              Object {
                "value": "music",
              },
              Object {
                "value": "maths",
              },
              Object {
                "value": "manga",
              },
              Object {
                "value": "morning",
              },
              Object {
                "value": "musical",
              },
              Object {
                "value": "mania",
              },
              Object {
                "value": "message",
              },
              Object {
                "value": "metal",
              },
              Object {
                "value": "micro",
              },
              Object {
                "value": "macro",
              },
              Object {
                "value": "microphone",
              },
            ]
          }
          multiSection={false}
          renderInputComponent={[Function]}
          renderItem={[Function]}
          renderItemData={
            Object {
              "query": "",
            }
          }
          renderItemsContainer={[Function]}
          renderSectionTitle={[Function]}
          theme={Object {}}
        >
          <div
            key="react-autowhatever-1-container"
            style={Object {}}
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-expanded={true}
              aria-owns="react-autowhatever-1"
              autoComplete="off"
              className="formControl false "
              disabled={false}
              id="name"
              key="react-autowhatever-1-input"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Type m"
              required={true}
              role="combobox"
              style={Object {}}
              type="text"
              value=""
            />
            <div
              id="react-autowhatever-1"
              key="react-autowhatever-1-items-container"
              style={Object {}}
            >
              <ItemsList
                getItemId={[Function]}
                highlightedItemIndex={null}
                itemProps={[Function]}
                items={
                  Array [
                    Object {
                      "value": "music",
                    },
                    Object {
                      "value": "maths",
                    },
                    Object {
                      "value": "manga",
                    },
                    Object {
                      "value": "morning",
                    },
                    Object {
                      "value": "musical",
                    },
                    Object {
                      "value": "mania",
                    },
                    Object {
                      "value": "message",
                    },
                    Object {
                      "value": "metal",
                    },
                    Object {
                      "value": "micro",
                    },
                    Object {
                      "value": "macro",
                    },
                    Object {
                      "value": "microphone",
                    },
                  ]
                }
                keyPrefix="react-autowhatever-1-"
                onHighlightedItemChange={[Function]}
                renderItem={[Function]}
                renderItemData={
                  Object {
                    "query": "",
                  }
                }
                sectionIndex={null}
                theme={[Function]}
              >
                <ul
                  key="react-autowhatever-1-items-list"
                  role="listbox"
                  style={Object {}}
                >
                  <Item
                    data-section-index={null}
                    data-suggestion-index={0}
                    id="react-autowhatever-1--item-0"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "music",
                      }
                    }
                    itemIndex={0}
                    key="react-autowhatever-1-item-0"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={0}
                      id="react-autowhatever-1--item-0"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        music
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={1}
                    id="react-autowhatever-1--item-1"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "maths",
                      }
                    }
                    itemIndex={1}
                    key="react-autowhatever-1-item-1"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={1}
                      id="react-autowhatever-1--item-1"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        maths
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={2}
                    id="react-autowhatever-1--item-2"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "manga",
                      }
                    }
                    itemIndex={2}
                    key="react-autowhatever-1-item-2"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={2}
                      id="react-autowhatever-1--item-2"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        manga
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={3}
                    id="react-autowhatever-1--item-3"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "morning",
                      }
                    }
                    itemIndex={3}
                    key="react-autowhatever-1-item-3"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={3}
                      id="react-autowhatever-1--item-3"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        morning
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={4}
                    id="react-autowhatever-1--item-4"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "musical",
                      }
                    }
                    itemIndex={4}
                    key="react-autowhatever-1-item-4"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={4}
                      id="react-autowhatever-1--item-4"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        musical
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={5}
                    id="react-autowhatever-1--item-5"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "mania",
                      }
                    }
                    itemIndex={5}
                    key="react-autowhatever-1-item-5"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={5}
                      id="react-autowhatever-1--item-5"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        mania
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={6}
                    id="react-autowhatever-1--item-6"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "message",
                      }
                    }
                    itemIndex={6}
                    key="react-autowhatever-1-item-6"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={6}
                      id="react-autowhatever-1--item-6"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        message
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={7}
                    id="react-autowhatever-1--item-7"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "metal",
                      }
                    }
                    itemIndex={7}
                    key="react-autowhatever-1-item-7"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={7}
                      id="react-autowhatever-1--item-7"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        metal
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={8}
                    id="react-autowhatever-1--item-8"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "micro",
                      }
                    }
                    itemIndex={8}
                    key="react-autowhatever-1-item-8"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={8}
                      id="react-autowhatever-1--item-8"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        micro
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={9}
                    id="react-autowhatever-1--item-9"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "macro",
                      }
                    }
                    itemIndex={9}
                    key="react-autowhatever-1-item-9"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={9}
                      id="react-autowhatever-1--item-9"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        macro
                      </span>
                    </li>
                  </Item>
                  <Item
                    data-section-index={null}
                    data-suggestion-index={10}
                    id="react-autowhatever-1--item-10"
                    isHighlighted={false}
                    item={
                      Object {
                        "value": "microphone",
                      }
                    }
                    itemIndex={10}
                    key="react-autowhatever-1-item-10"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    renderItem={[Function]}
                    renderItemData={
                      Object {
                        "query": "",
                      }
                    }
                    sectionIndex={null}
                    style={Object {}}
                  >
                    <li
                      data-section-index={null}
                      data-suggestion-index={10}
                      id="react-autowhatever-1--item-10"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onTouchStart={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <span>
                        microphone
                      </span>
                    </li>
                  </Item>
                </ul>
              </ItemsList>
            </div>
          </div>
        </Autowhatever>
      </Autosuggest>
    </div>
  </div>
</ComboboxComponent>
`;

exports[`Renders Combobox with an error message without crashing 1`] = `
<div
  className="formGroup inline "
  id="name-container"
>
  
  <label
    className="controlLabel false controlLabelError"
    htmlFor="name"
  >
    Combobox
  </label>
  <div
    className="container"
  >
    <div
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        className="formControl false formControlError"
        disabled={false}
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type m"
        required={true}
        role="combobox"
        style={Object {}}
        type="text"
        value=""
      />
      <div
        id="react-autowhatever-1"
        style={Object {}}
      />
    </div>
    
    <span
      className="error"
    >
      <strong
        className="info"
      >
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`Renders Combobox without crashing 1`] = `
<div
  className="formGroup inline "
  id="name-container"
>
  
  <label
    className="controlLabel false "
    htmlFor="name"
  >
    Combobox
  </label>
  <div
    className="container"
  >
    <div
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        className="formControl false "
        disabled={false}
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type m"
        required={true}
        role="combobox"
        style={Object {}}
        type="text"
        value=""
      />
      <div
        id="react-autowhatever-1"
        style={Object {}}
      />
    </div>
    
  </div>
</div>
`;

exports[`Searchable Combobox Renders notSearchableCombobox without crashing 1`] = `
<div
  className="formGroup inline "
  id="name-container"
>
  
  <label
    className="controlLabel false "
    htmlFor="name"
  >
    Combobox
  </label>
  <div
    className="container"
  >
    <div
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        className="formControl isNotSearchable "
        disabled={false}
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type m"
        required={true}
        role="combobox"
        style={Object {}}
        type="text"
        value=""
      />
      <div
        id="react-autowhatever-1"
        style={Object {}}
      />
    </div>
    
  </div>
</div>
`;
